<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">Last.fm Scrobbler</string>
	<string name="main_cancel">Cancel</string>
	<string name="main_login">Log in</string>
	<string name="main_setup">Setup</string>
	<string name="main_signup">Sign up</string>
	<string name="main_newaccount">&quot;Haven't got an account yet?&quot;</string>

	<string name="home_logout">Log out</string>
	<string name="home_tracksplayed">plays</string>
	<string name="home_newstation">Start a New Station</string>
	<string name="home_myrecs">Recommended by Last.fm</string>
	<string name="home_myneighborhood">Your Neighborhood</string>
	<string name="home_myloved">Your Loved Tracks</string>
	<string name="home_mylibrary">Your Library</string>
	<string name="home_mystations">Your Stations</string>
	<string name="home_recentstations">Recent Stations</string>
	<string name="home_commonartists">Common Artists</string>
	
	<string name="radio">Radio</string>
	<string name="profile">Profile</string>
	<string name="fans">Fans</string>
	
	<string name="dialog_amazon">Buy on Amazon</string>
	<string name="dialog_similar">Listen to Similar Artists</string>
	<string name="dialog_tagalbum">Tag Album</string>
	<string name="dialog_tagartist">Tag Artist</string>
	<string name="dialog_tagtrack">Tag Track</string>
	<string name="dialog_share">Share</string>
	<string name="dialog_addlibrary">Add to Library</string>
	<string name="dialog_addplaylist">Add to Playlist</string>
	<string name="dialog_love">Love</string>
	<string name="dialog_ban">Ban</string>
	

	<string name="search">Search</string>
	<string name="newstation_artist">Artist</string>
	<string name="newstation_tag">Tag</string>
	<string name="newstation_user">User</string>
	<string name="newstation_hint_artist">To start listening,\n type in an artist you like.</string>
	<string name="newstation_hint_tag">Type in a tag to get started.</string>
	<string name="newstation_hint_user">Type in a username\n to get started.</string>

	<string name="event_showmap">Show Map</string>
	<string name="event_attending">I\'m attending</string>
	<string name="event_notattending">I\'m not attending</string>
	<string name="event_maybe">I might attend</string>

	<string name="durationformat">
		<xliff:g id="format">%2$d:%5$02d</xliff:g>
	</string>
	<string name="logout">Logout</string>
	<string name="cancel">Cancel</string>
	<string name="ok">OK</string>
	<string name="add">Add</string>
	<string name="done">Done</string>
	<string name="tag">Tag</string>
	<string name="tag_hint">Type tags here, or choose from below</string>
	<string name="tagarea_hint">Enter a tag above,\nor choose one from below</string>
	
	<string name="home_mytags">My Tags</string>

	<string name="ERROR_AUTH">Unable to log in to Last.fm.  Please check your username and password and try again.</string>
	<string name="ERROR_AUTH_TITLE">Incorrect Login</string>
	<string name="ERROR_CHART_EMPTY">&quot;This chart hasn't been generated yet.  Keep listening to music, and try again in a few days.&quot;</string>
	<string name="ERROR_CHART_EMPTY_TITLE">Chart Not Available</string>
	<string name="ERROR_INSUFFICIENT_CONTENT">There is not enough content available to play this station.  Please try another station.</string>
	<string name="ERROR_INSUFFICIENT_CONTENT_TITLE">Insufficient Content</string>
	<string name="ERROR_INSUFFICIENT_FANS">There are not enough fans of this artist to play this station.  Please try another artist.</string>
	<string name="ERROR_INSUFFICIENT_MEMBERS">There are not enough members in this group to play this station.  Please try another group.</string>
	<string name="ERROR_INSUFFICIENT_NEIGHBOURS">&quot;Your musical neighborhood hasn't been calculated yet.  Try listening to more music and try again in a few days.&quot;</string>
	<string name="ERROR_MISSINGINFO">&quot;You must have a valid Last.fm username and password.  If you don't have an account, click the Sign Up button.&quot;</string>
	<string name="ERROR_MISSINGINFO_TITLE">Missing Information</string>
	<string name="ERROR_NONETWORK">This feature requires a connection to the internet.  Please connect to the internet and try again.</string>
	<string name="ERROR_NONETWORK_TITLE">No Network Connection</string>
	<string name="ERROR_PLAYBACK_FAILED">An error occurred while trying to play this track.  Please try again shortly.</string>
	<string name="ERROR_PLAYBACK_FAILED_TITLE">Playback Failed</string>
	<string name="ERROR_REGFAILURE_TITLE">Account Creation Failed</string>
	<string name="ERROR_SERVER_UNAVAILABLE">There was a problem communicating with the Last.fm servers.  Please try again shortly.</string>
	<string name="ERROR_SERVER_UNAVAILABLE_TITLE">Communication Error</string>
	<string name="ERROR_SESSION">This application is no longer linked with your Last.fm account.  Please log in again.</string>
	<string name="ERROR_SESSION_TITLE">Invalid Session</string>
	<string name="ERROR_STATION_TITLE">Station Not Available</string>
	<string name="ERROR_SUBSCRIPTION">Please check your subscription status at the Last.fm website.</string>
	<string name="ERROR_SUBSCRIPTION_TITLE">Subscribers Only</string>
	<string name="ERROR_NOSUCHUSER">Unable to find a user with this username.  Please check the spelling and try again</string>
	<string name="ERROR_NOSUCHUSER_TITLE">User Not Found</string>
	<string name="ERROR_UPGRADE">An upgrade is required to continue using this software.  Please upgrade your software and try again.</string>
	<string name="ERROR_UPGRADE_TITLE">Upgrade Required</string>
<string name="signup_create_account">Create Account</string>
<string name="ERROR_SIGNUP_TITLE">Could not signup</string>

</resources>
